WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308063
[JSC] Getter ICs shouldn't check for NullSetterFunction
https://bugs.webkit.org/show_bug.cgi?id=308063
Summary
[JSC] Getter ICs shouldn't check for NullSetterFunction
Keith Miller
Reported
2026-02-17 10:05:36 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-17 10:05:44 PST
<
rdar://problem/170563020
>
Keith Miller
Comment 2
2026-02-17 10:11:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58861
EWS
Comment 3
2026-02-17 13:41:49 PST
Committed
307725@main
(a4c33dfcff8d): <
https://commits.webkit.org/307725@main
> Reviewed commits have been landed. Closing PR #58861 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug