[JSC] Getter ICs shouldn't check for NullSetterFunction https://bugs.webkit.org/show_bug.cgi?id=308063 rdar://170563020

Reviewed by Yusuke Suzuki.

It's not possible to get a NullSetterFunction as a get function in JS so
checking for it in the IC code is presumably a mistake (probably from a
refactor). I assume NullGetterFunction is also sufficiently rare that it
no longer makes sense to preemptively branch on it. Naively, there's not
a lot of use cases for a property that can't be read, so optimizing for
it doesn't seem worthwhile.

No new tests, covered by existing tests.

Canonical link: https://commits.webkit.org/307725@main